# rsomics-bed-slop

./: Cargo.toml
.github/workflows/: ci.yml
benches/: bed_slop.rs  bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: input.bed  slop_b50.expected
