[package]
name = "rsomics-bed-slop"
version = "0.1.0"
description = "Extend BED intervals by N bp on each side, clamping to chromosome bounds — bedtools slop equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bed-slop"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bed", "slop", "bioinformatics", "bedtools", "genomics"]

[[bin]]
name = "rsomics-bed-slop"
path = "src/main.rs"

[lib]
name = "rsomics_bed_slop"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[[bench]]
name = "bed_slop"
harness = false

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
